welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:36: error: missing arguments for method faireMotif;
follow this method with `_' if you want to treat it as a partially applied function
		faireMotif
                ^MethodsPicture:45: error: not found: value c
faireMotif(c);
           ^